Roteiro 4 entrega